--- a/tugas3.html
+++ b/tugas3.html
@@ -1,11 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=text] {
+  -moz-appearance: textfield;
+}
+input{
+	width: 25px;
+	height: 25px;
+}
+
+</style>
 </head>
 <body>
-    <h1><b>RIKA BONENG CANTIK</b></h1>
+		<center>
+			<div>
+				<img src="cop.JPG" width="920" height="120px">
+			</div><br>
+		</center>
+		&nbsp; 
+		<center>
+			<b>
+				<h2>FORMULIR PENDAFTARAN MAHASISWA BARU</h2>
+				<h2>TAHUN AKADEMIK 2018/2019 </h2>
+			</b>
+		</center>
+		<center>
+			<div>
+				<form>
+					<table>
+						<tr><td><b>A. NO. PENDAFTARAN</b></td>
+									<td><b>:</b> <input type="text" value=""><input type="text" value=""><input type="text" value=""><input type="text" value=""><input type="text" value=""><input type="text" value=""><input type="text" value=""></td>
+							</tr>
+							<tr><td> &nbsp; &nbsp; &nbsp;<b>Pilihan Kelas</b></td><td><b>:</b> <input type="text" value=""> <b>1) Reguler</b> &nbsp; <b>2) Ekstensi</b> &nbsp; <b>3) Konversi</b> &nbsp; <b>4) Transfer</b></td></tr>
+							<tr><td><br><b>B. DATA CALON MAHASISWA</b></td></tr>
+							<tr><td>1. Nama</td><td>:...........................................................................................................................................................................</td></tr>
+							<tr><td>2. Tempat/Tanggal Lahir </td><td>:...........................................................................................................................................................................</td></tr>
+							<tr><td>3. Jenis Kelamin</td><td> : <input type="checkbox" value=""> Laki-laki <input type="checkbox" value=""> Perempuan &nbsp; (Contreng sesuai pilihan)</td></tr>
+							<tr><td>4. Alamat</td><td>:...........................................................................................................................................................................</td></tr>
+							<tr><td> &nbsp; &nbsp; RT/RW</td><td>:......................................... / ......................................... </td></tr>
+							<tr><td> &nbsp; &nbsp; Kota/Kabupaten</td><td>:......................................... Kota/Kabupaten :......................................... Kode Pos :.........................................</td></tr>
+							<tr><td> &nbsp; &nbsp; Hp/e-Mail</td><td>:......................................... / .........................................</td></tr>
+							<tr><td>5. Asal Sekolah</td><td>:...........................................................................................................................................................................</td></tr>
+							<tr><td>6. Alamat Sekolah</td><td>:...........................................................................................................................................................................</td></tr>
+							<tr><td>7. Jurusan</td><td> : <input type="checkbox" value=""> IPA <input type="checkbox" value=""> IPS <input type="checkbox" value=""> Bahasa <input type="checkbox" value=""> Lainnya ..............................................................................................</td></tr>
+							<tr><td>8. NISN</td><td>:...........................................................................................................................................................................</td></tr>
+							<tr><td>9. No Ijazah</td><td>:...........................................................................................................................................................................</td></tr>
+							<tr><td>10. Tanggal Ijazah</td><td>:...........................................................................................................................................................................</td></tr>
+							<tr><td>11. Nilai UN</td><td>:...........................................................................................................................................................................</td></tr>
+					</table>
+				</form>
+			</div>
+		</center>
+		&nbsp; 
+			<center>
+				<div>
+					<form>
+						<table>
+							<tr><td><b>C. DATA ORANG TUA</b></td></tr>
+							<tr><td>1. Nama Ayah</td><td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; :...........................................................................................................................................................................</td></tr>
+							<tr><td>2. Pekerjaan Ayah </td><td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; :...........................................................................................................................................................................</td></tr>
+							<tr><td>3. Penghasilan Per bulan</td><td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  : <input type="checkbox" value=""> < 1 Juta <input type="checkbox" value=""> 1-2 Juta <input type="checkbox" value=""> 2-5 Juta <input type="checkbox" value=""> < 5 Juta &nbsp; </td></tr>
+							<tr><td>4. Pendidikan Ayah</td><td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; :...........................................................................................................................................................................</td></tr>
+							<tr><td>5. Nama Ibu</td><td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; :...........................................................................................................................................................................</td></tr>
+							<tr><td>6. Pekerjaan Ibu </td><td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; :...........................................................................................................................................................................</td></tr>
+							<tr><td>7. Penghasilan Per bulan</td><td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  : <input type="checkbox" value=""> < 1 Juta <input type="checkbox" value=""> 1-2 Juta <input type="checkbox" value=""> 2-5 Juta <input type="checkbox" value=""> < 5 Juta &nbsp; </td></tr>
+							<tr><td>8. Pendidikan Ibu</td><td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; :...........................................................................................................................................................................</td></tr>
+						</table>
+					</form>
+				</div>	
+			<br>
+			</center>
+		<center>
+			<div>
+				<img src="1.jpg" width="950" height="200px">
+			</div>
+			<p>------------------------------------------------------------------------------ Potong Disini ------------------------------------------------------------------------------</p>
+			<div>
+				<img src="2.jpg" width="940" height="250px">
+			</div>
+		</center>
 </body>
 </html>
